# genomics

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  api_gateway_config.yaml  aws_manage.sh  dev.sh  docker-compose.yml  docker-manage.sh  dynamodb-local-metadata.json  elasticbeanstalk-policy.json  generate_mock_patients.py  init_project.sh  instructions.txt  manage.py  projectoutline.txt  pyproject.toml  requirements.txt  run_system.py  setup.sh  setup_and_run_genomics_project.sh  setup_aws.py  setup_iam.sh  shared-local-instance.db  start_dynamodb_local.sh  start_genomics_project.sh  start_services.py  template.yaml  test_data.csv  test_patient.json  test_service.py  update_iam_permissions.sh  verify_dynamodb.py  verify_environment.py  verify_iam_setup.py  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
config/: __init__.py  default.yml  production.yml
services/ai_model/: main.py  model.py
services/dashboard/: Dockerfile  main.py  streamlit_app.py
services/dashboard/templates/: index.html  metrics.html
services/data_ingestion/: Dockerfile  main.py
services/logging/: logger.py
services/model_training/: main.py
services/patient_management/: Dockerfile  app.py  main.py  progress_tracker.py  test_aws.py  test_dynamodb.py
services/powerbi_integration/: main.py
services/preprocessing/: main.py
services/rag_pipeline/: main.py
services/treatment_prediction/: Dockerfile  main.py
services/utils/: error_handling.py  logging.py  monitoring.py  orchestration.py
tests/: conftest.py  system_test.py  test_data_ingestion.py  test_patient_management.py  test_powerbi_integration.py  test_system.py  test_treatment_prediction.py  utils.py
